<resources>
    <string name="app_name">Shatter</string>
    <string name="delete">Delete key</string>
    <string name="select">Select</string>
    <string name="sessionID">Session ID</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="select_file">Select file</string>
    <string name="export_main_key">Export main key</string>
    <string name="import_key">Import Key</string>
    <string name="title_activity_import_key">ImportKey</string>
    <string name="action_settings">Settings</string>
    <string name="alias">Alias</string>
    <string name="file_crt">File .crt</string>
    <string name="import_finish">Import</string>
</resources>
