<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_key"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/keyAlias_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alias"
        android:inputType="text"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/crtFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/file_crt"
            android:inputType="text"
            android:maxLines="1" />

        <Button
            android:id="@+id/selectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_file" />

    </LinearLayout>

    <Button
        android:id="@+id/importDoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_finish" />

</LinearLayout>
